# iot_app

./: .env.production  .gitignore  AGENTS.md  README.en-US.md  README.md  index.html  mcp.md  package.json  pnpm-lock.yaml  stylelint.config.js  tsconfig.json  vite.config.ts
docs/: admin-user-device-reserve-api-contract.md  admin-user-registration-and-device-reserve-operation.md  ai-skills-usage.md  database-access-policy.md  deployment-strategy.md  development-progress.md  modbus-integration-guide.md  postgresql-timescaledb-runtime.md  project-introduction.md  tauri-framework-constraints.md
plan/: 2026-02-27-1007-plan-folder-skill-sync.md  2026-02-27-1017-auth-sqlite-storage.md  2026-02-27-1035-db-sql-files.md  2026-02-27-1101-dbhub-policy.md  2026-02-27-1109-readme-db-location.md  2026-02-27-1117-auth-jwt-jsonwebtoken.md  2026-02-27-1138-local-thin-cleanup.md  2026-02-27-1146-db-seed-offline-values.md  2026-02-27-1150-readme-mcp-dbhub-fix.md  2026-02-27-1156-one-time-avatar-icon-cleanup.md  2026-02-27-1222-remove-login-avatar-icon.md  2026-02-27-1240-remove-navbar-user-avatar.md  2026-02-27-1248-remove-notice-panel-avatar.md  2026-02-27-1304-redb-notice-center-read-state.md  2026-02-27-1319-notice-read-tab.md  2026-02-27-1331-install-vue-superpowers-skills.md  2026-02-27-1347-skills-mcp-health-check.md  2026-02-27-1408-replace-dbhub-mcp.md  2026-02-28-0834-fix-db-schema-and-baseline-mapping.md  2026-02-28-0845-db-mod-thin-interface.md  2026-02-28-0953-readme-notice-redb-location.md  2026-02-28-0959-hide-error-route-menu.md  2026-02-28-1005-parent-menu-icon-fallback.md  2026-02-28-1030-admin-register-device-reserve-doc.md  2026-02-28-1105-admin-register-implementation.md  2026-02-28-1138-user-register-management-crud.md  2026-02-28-1437-permission-page-collapse-order.md  2026-02-28-1501-fix-progress-import.md  2026-02-28-1517-hide-button-permission-page.md  2026-02-28-1902-rusqlite-to-sqlx.md  2026-02-28-1933-upgrade-rust-tauri-cli.md  2026-02-28-1947-postgres-timescaledb-migration.md  2026-02-28-2020-readme-postgres-sync.md  2026-02-28-2046-db-seaorm-optimization.md  2026-02-28-2114-db-access-policy-constraints.md  2026-02-28-2158-casbin-rbac-postgres.md  2026-02-28-2220-secure-runtime-config.md  2026-02-28-2238-tracing-logging-pipeline.md  2026-02-28-2252-frontend-backend-trace-correlation.md  2026-02-28-2301-fix-tauri-log-double-init.md  (+7 more)
public/: platform-config.json
skills/project-aicode-workflow/: SKILL.md
src/: AGENTS.md  README.md  main.ts
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/config/: default.toml  local.example.toml
src-tauri/src/: AGENTS.md  README.md  lib.rs  main.rs
src-tauri/src/auth/: README.md  admin_commands.rs  admin_services.rs  commands.rs  mod.rs  models.rs  rbac.rs  services.rs
src-tauri/src/core/: README.md  config.rs  error.rs  mod.rs  tracing.rs
src-tauri/src/db/: README.md  admin_repository.rs  auth_repository.rs  bootstrap.rs  migrations.rs  mod.rs  path_store.rs  tests.rs
src-tauri/src/db/admin_repository/: seaorm_users.rs  sqlx_reports.rs
src-tauri/src/db/entities/: mod.rs  prelude.rs  user_roles.rs  users.rs
src-tauri/src/db/migrations/: 0001_schema.sql  0002_seed.sql  0003_legacy_offline_cleanup.sql  0004_user_registration_extension.sql  0005_permission_page_to_user_registration.sql  0006_hide_button_permission_route.sql  README.md
src-tauri/src/notice/: README.md  commands.rs  mod.rs  models.rs  repository.rs  services.rs
src/api/: modbus.ts  notice.ts  routes.ts  tauriInvoke.ts  user.ts
src/components/ReIcon/: index.ts
src/components/ReIcon/src/: hooks.ts  offlineIcon.ts
src/config/: index.ts
src/directives/: index.ts
src/layout/components/lay-content/: index.vue
src/layout/components/lay-navbar/: index.vue
src/layout/components/lay-notice/: data.ts  index.vue
src/layout/components/lay-notice/components/: NoticeItem.vue  NoticeList.vue
src/layout/components/lay-sidebar/: NavHorizontal.vue  NavMix.vue
src/layout/hooks/: useNav.ts
src/router/: index.ts  utils.ts
src/router/modules/: error.ts  modbus.ts
src/style/: element-plus.scss  index.scss  login.css  reset.scss  theme.scss
src/utils/: auth.ts
src/utils/progress/: index.ts
src/views/login/: index.vue
src/views/modbus/: index.vue  modbus-page.css
src/views/modbus/components/: ModbusPointTable.vue
src/views/modbus/composables/: modbusPage.types.ts  useAutoReadRefresh.ts  useModbusPage.ts  useModbusPagePersistence.ts  usePollTimeoutAlarm.ts
src/views/permission/page/: index.vue
src/views/welcome/: index.vue
types/: global.d.ts
