[package]
name = "pure_admin_thin_tauri"
version = "0.1.0"
description = "pure-admin-thin desktop app powered by Tauri"
authors = ["pure-admin contributors"]
license = "MIT"
repository = "https://github.com/zw834675966/iot_app"
edition = "2024"
rust-version = "1.85"

[lib]
name = "pure_admin_thin_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls"
] }
tokio = { version = "1.48", features = ["rt-multi-thread"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
sea-orm = { version = "1.1", default-features = false, features = [
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls"
] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
