[package]
name = "pure_admin_thin_tauri"
version = "0.1.0"
description = "pure-admin-thin desktop app powered by Tauri"
authors = ["pure-admin contributors"]
license = "MIT"
repository = "https://github.com/zw834675966/iot_app"
edition = "2024"
rust-version = "1.85"

[lib]
name = "pure_admin_thin_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tauri = { version = "2.10.0", features = [] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls"
] }
tokio = { version = "1.48", features = ["rt-multi-thread"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dotenvy = "0.15"
sea-orm = { version = "1.1", default-features = false, features = [
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls"
] }
casbin = { version = "2.16", default-features = false, features = [
  "runtime-tokio"
] }
sqlx-adapter = { version = "1.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls"
] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
